<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dynamic_questionnaire</string>
    <string name="action_settings">Settings</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="Logo">Logo</string>
    <string name="Next">Next</string>
    <string name="Close">Close</string>
    
    <string name="_mnt_sdcard_info_db">/mnt/sdcard/info.db</string>
    <string name="Question01">Q1b. 	দয়া করে এই কার্ডে লেখা মন্তব্যগুলো মনোযোগ দিয়ে একবার পড়ুন। আপনি বলতে পারেন কি, এই মন্তব্যগুলোর কোনটি আপনার এইমাত্র বলা বিজ্ঞাপনটিকে সবচেয়ে ভালভাবে বর্ননা করে?</string>
    <string name="top_text">Dynamic Questionnaire System</string>

</resources>
