<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dip"
    >
	
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:contentDescription="@string/Logo"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:text="@string/top_text"
            android:textSize="36sp" />

    </TableRow>
    
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
        
        <TableLayout
			  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:stretchColumns="0" >

			  <TableRow
			      android:layout_width="fill_parent"
			      android:layout_height="wrap_content" >
			  
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:textSize="20sp" 
            android:id="@+id/question"
            android:text="@string/Question01"/>
        
        	</TableRow>
        </TableLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="350dp" >

        <TableLayout
			  android:layout_width="fill_parent"
			  android:layout_height="350dp"
			  android:id="@+id/myTable"
			  android:stretchColumns="0" >
			  <TableRow android:layout_width="fill_parent"
			    		android:id="@+id/myTableRow">
				  
        <!-- <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:text="1"
            android:textSize="20sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:text="2"
            android:textSize="20sp" /> -->

        	</TableRow>
        </TableLayout>
        </ScrollView>
    </LinearLayout>
        
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnClose"
                android:text="@string/Close"
                android:onClick="Close"
                android:layout_weight="1.0"/>
                
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnStop"
                android:text="@string/Next"
                android:onClick="NextQuestion"
                android:layout_weight="1.0"/>
        
    </LinearLayout>
</LinearLayout>
